{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 16,
  "lineage": "4124ed2c-16d6-f0fe-e902-7f8e2ad7a8c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "panda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:373081239851:instance/i-0c59502b0d0551a75",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c59502b0d0551a75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "panda_kurs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd7b2c40ef84ceeb",
            "private_dns": "ip-10-83-0-7.ec2.internal",
            "private_ip": "10.83.0.7",
            "public_dns": "ec2-3-92-75-59.compute-1.amazonaws.com",
            "public_ip": "3.92.75.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d07a96833f275d97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0195713361cf41262",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09fa2926f58512769"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:373081239851:instance/i-0143fad751ba7b1ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0143fad751ba7b1ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "panda_kurs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a42b4df51c9d08c",
            "private_dns": "ip-10-83-1-204.ec2.internal",
            "private_ip": "10.83.1.204",
            "public_dns": "ec2-3-235-124-91.compute-1.amazonaws.com",
            "public_ip": "3.235.124.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080acea7e5bb3747a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04344a3acaed9dfe0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09fa2926f58512769"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373081239851:internet-gateway/igw-05cded373546c7490",
            "id": "igw-05cded373546c7490",
            "owner_id": "373081239851",
            "vpc_id": "vpc-00ecbce63fb711027"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:loadbalancer/app/alb/dbeab59e95e81127",
            "arn_suffix": "app/alb/dbeab59e95e81127",
            "dns_name": "alb-611570642.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:373081239851:loadbalancer/app/alb/dbeab59e95e81127",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-09fa2926f58512769"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0195713361cf41262"
              },
              {
                "subnet_id": "subnet-04344a3acaed9dfe0"
              }
            ],
            "subnets": [
              "subnet-0195713361cf41262",
              "subnet-04344a3acaed9dfe0"
            ],
            "vpc_id": "vpc-00ecbce63fb711027",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:listener/app/alb/dbeab59e95e81127/87aeaaf7fb12e1e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:373081239851:listener/app/alb/dbeab59e95e81127/87aeaaf7fb12e1e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:loadbalancer/app/alb/dbeab59e95e81127",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca",
            "arn_suffix": "targetgroup/tg/41632ec6f216f3ca",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00ecbce63fb711027"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca-20210712173617484300000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca",
            "target_id": "i-0c59502b0d0551a75"
          },
          "dependencies": [
            "aws_instance.panda",
            "aws_lb_target_group.tg",
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca-20210712173617549600000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:373081239851:targetgroup/tg/41632ec6f216f3ca",
            "target_id": "i-0143fad751ba7b1ed"
          },
          "dependencies": [
            "aws_instance.panda",
            "aws_lb_target_group.tg",
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373081239851:route-table/rtb-0e41cd1607e88519e",
            "id": "rtb-0e41cd1607e88519e",
            "owner_id": "373081239851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cded373546c7490",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub"
            },
            "tags_all": {
              "Name": "rt-pub"
            },
            "vpc_id": "vpc-00ecbce63fb711027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0951c98087f338640",
            "route_table_id": "rtb-0e41cd1607e88519e",
            "subnet_id": "subnet-0195713361cf41262"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e664c80f11aa5ab",
            "route_table_id": "rtb-0e41cd1607e88519e",
            "subnet_id": "subnet-04344a3acaed9dfe0"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373081239851:security-group/sg-09fa2926f58512769",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-09fa2926f58512769",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210712173508980200000001",
            "name_prefix": "terraform-",
            "owner_id": "373081239851",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ecbce63fb711027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373081239851:subnet/subnet-0195713361cf41262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.83.0.0/24",
            "id": "subnet-0195713361cf41262",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373081239851",
            "vpc_id": "vpc-00ecbce63fb711027"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373081239851:subnet/subnet-04344a3acaed9dfe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.83.1.0/24",
            "id": "subnet-04344a3acaed9dfe0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373081239851",
            "vpc_id": "vpc-00ecbce63fb711027"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:373081239851:vpc/vpc-00ecbce63fb711027",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.83.0.0/16",
            "default_network_acl_id": "acl-04d780f661fef9562",
            "default_route_table_id": "rtb-0f065e7e2480a30cf",
            "default_security_group_id": "sg-0aec5317f14016a3a",
            "dhcp_options_id": "dopt-5f999f25",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00ecbce63fb711027",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f065e7e2480a30cf",
            "owner_id": "373081239851",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}